style.css
    * {
        font-family: "JetBrains Mono", monospace;
    }

    html, body {
        height: 100vh;
        margin: 0;
        overflow: hidden;
    }

    body {
        background-color: #fff0f3;
        background-opacity: 0.7;
        background-image:  linear-gradient(#ffffff 2px, transparent 2px), linear-gradient(to right, #ffffff 2px, #fff0f3 2px);
        background-size: 40px 40px;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    /* Main Window */

    #mainWindow {
        background-color: #FFFFFF;
        height: 28em;
        width: 53em;
        display: grid;
        border: solid 1px #1B1741;
        border-radius: 1.5em;
        box-sizing: inherit;
        z-index: 1;
        position: static;
        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    }

    #mainWindow #header {
        background-color: #3D3A5B;
        border-bottom: 1px solid #1B1741;
        border-radius: 1.4em 1.4em 0 0;
        height: 2.3em;
    }

    #header img{
        height: 1em;
        width: 1em;
        margin-left: 1em;
        margin-top: 0.6em;
    }

    #mainWindow h1 {
        font-size : 2em;
        text-align: center;
        margin-bottom: -1em;
    }

    #mainWindow h2 {
        font-size : 1.8em;
        text-align: center;
        color: #5D5985;
        font-weight: bold;
    }

    #mainWindow p {
        font-size : 1em;
    }

    #mainWindow h1, p {
        color: #1B1741;
        font-weight: bold;
    }

    #mainButtons {
        display: flex;
        flex-direction: row;
        margin-left: 4em;
        margin-right: 4em;
        justify-content: space-between;
    }

    #mainButtons p {
        text-align: center;
        display: grid;
        justify-content: space-around;
    }

    #mainButtons img {
        width: 6.5em;
    }

    #mainButtons img:hover {
        -webkit-transform: scale(1.2);
        -ms-transform: scale(1.2);
        transform: scale(1.2);
        transition: 0.5s ease;
    }

    #mainButtons #expProImg {
        margin-left: 1.5em;
    }

    /* A Propos Window */

    #aProposWindow {
        background-color: #FFF;
        height: 28em;
        width: 50em;
        border: solid 1px #1B1741;
        border-radius: 1.5em;
        z-index: 3;
        position: absolute;
        box-sizing: border-box;
        display: none;
        top: 120px;
        left: 150px;
        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    }

    #aProposWindow .header {
        background-color: #3D3A5B;
        padding-top: 0.5em;
        border-bottom: 1px solid #1B1741;
        border-radius: 1.4em 1.4em 0 0;
        height: 2em;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 0;
        cursor: grab;
    }

    #aProposWindow .header p {
        color: #FFF;
        margin-left: 1em;
    }

    #aProposWindow .header img {
        width: 2em;
        margin-right: 1em;
        cursor: auto;
    }

    #aProposWindow #aProposMainFrame {
        display: flex;
        flex-direction: column;
        gap: 2em;
        max-width: 100%;
        max-height: 24em;
        overflow: auto;
        padding: 1em;
        box-sizing: border-box;
        overflow-wrap: break-word;
    }

    #aProposWindow #aProposMainFrame #aPropos1stPart {
        display: flex;
        align-items: center;
        gap: 2em;
    }

    #aProposWindow #aProposMainFrame #aPropos1stPart #bunnyPfp img {
        justify-content: end;
        height: 10em;
    }

    #aProposWindow #aProposMainFrame #aProposTxt1 {
        justify-content: start;
        flex: 1;
    }

    #aProposWindow #aProposMainFrame #aProposTxt1 span {
        color: #856ABD;
        font-weight: bolder;
    }

    #aProposWindow #aProposMainFrame #aProposTxt2 {
        margin-top: -1em;
    }

    #aProposWindow #aProposMainFrame #h4logos {
        margin-top: -1em;
        margin-bottom: -0.8em;
    }

    #aProposWindow #aProposMainFrame h4 {
        color: #1B1741;
    }

    #aProposWindow #aProposMainFrame .logos img {
        height: 3.5em;
    }

    /* Mes Projets */

    #projetsWindow {
        background-color: #FFF;
        height: 30em;
        width: 52em;
        border: solid 1px #1B1741;
        border-radius: 1.5em;
        z-index: 3;
        position: absolute;
        box-sizing: border-box;
        display: none;
        top: 200px;
        left: 200px;
        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    }

    #projetsWindow .header {
        background-color: #3D3A5B;
        padding-top: 0.5em;
        border-bottom: 1px solid #1B1741;
        border-radius: 1.4em 1.4em 0 0;
        height: 2em;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 0;
        cursor: grab;
    }

    #projetsWindow .header p {
        color: #FFF;
        margin-left: 1em;
    }

    #projetsWindow .header img {
        width: 2em;
        margin-right: 1em;
        cursor: auto;
    }

    #projetsWindow #projetsMainFrame p {
        display: flex;
        margin-left: 2em;
        margin-top: 2em;
    }


    /* Expériences Professionnelles */

    #expProWindow {
        background-color: #FFF;
        height: 28.5em;
        width: 50em;
        border: solid 1px #1B1741;
        border-radius: 1.5em;
        z-index: 3;
        position: absolute;
        box-sizing: border-box;
        display: none;
        top: 200px;
        left: 200px;
        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    }

    #expProWindow .header {
        background-color: #3D3A5B;
        padding-top: 0.5em;
        border-bottom: 1px solid #1B1741;
        border-radius: 1.4em 1.4em 0 0;
        height: 2em;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 0;
        cursor: grab;
    }

    #expProWindow .header p {
        color: #FFF;
        margin-left: 1em;
    }

    #expProWindow .header img {
        width: 2em;
        margin-right: 1em;
        cursor: auto;
    }

    #expProWindow #expProMainFrame {
        display: flex;
        flex-direction: column;
        gap: 2em;
        max-width: 100%;
        max-height: 24.5em;
        overflow: auto;
        padding: 1em;
        box-sizing: border-box;
    }

    #expProWindow #expProMainFrame .content {
        display: flex;
        align-items: flex-start;
        gap: 1.5em;
        box-sizing: border-box;
    }

    #expProWindow #expProMainFrame #divCorumTxt, #divOgataTxt, #divInalcoTxt {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        overflow-wrap: break-word;
    }

    #expProWindow #expProMainFrame p, h3, h4, ul{
        color: #1B1741;
        z-index: 4;
        margin: 0.5em 0;
    }

    #expProWindow #expProMainFrame .content img{
        width: 8em;
        padding: 1em;
    }

    /* Liens */

    #liensWindow {
        background-color: #FFF;
        height: 15em;
        width: 22em;
        border: solid 1px #1B1741;
        border-radius: 1.5em;
        z-index: 3;
        position: absolute;
        box-sizing: border-box;
        display: none;
        top: 200px;
        right: 200px;
        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    }

    #liensWindow .header {
        background-color: #3D3A5B;
        padding-top: 0.5em;
        border-bottom: 1px solid #1B1741;
        border-radius: 1.4em 1.4em 0 0;
        height: 2em;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 0;
        cursor: grab;
    }

    #liensWindow .header p {
        color: #FFF;
        margin-left: 1em;
    }

    #liensWindow .header img {
        width: 2em;
        margin-right: 1em;
        cursor: auto;
    }

    #liensWindow #liensMainFrame {
        display: flex;
        justify-content: space-between;
    }

    #liensWindow #linkedin, #github {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 2.1em;
    }

    #liensWindow img {
        width: 4em;
    }

    /* Contact */

    #contactWindow {
        background-color: #FFF;
        height: 24em;
        width: 46em;
        border: solid 1px #1B1741;
        border-radius: 1.5em;
        z-index: 3;
        position: absolute;
        box-sizing: border-box;
        display: none;
        top: 200px;
        right: 200px;
        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    }

    #contactWindow .header {
        background-color: #3D3A5B;
        padding-top: 0.5em;
        border-bottom: 1px solid #1B1741;
        border-radius: 1.4em 1.4em 0 0;
        height: 2em;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 0;
        cursor: grab;
    }

    #contactWindow .header p {
        color: #FFF;
        margin-left: 1em;
    }

    #contactWindow .header img {
        width: 2em;
        margin-right: 1em;
        cursor: auto;
    }

    #contactWindow #contactMainFrame p {
        display: flex;
        margin-left: 2em;
        margin-top: 2em;
    }

    /* Footer */

    footer {
        background-color: #3D3A5B;
        height: 2.5em;
        position: fixed;
        left: 0;
        bottom: 0;
        width: 100%;
        z-index: 2;
    }

    footer p {
        color: #FFFFFF;
        font-size: 0.7em;
        display: flex;
        justify-content: center;
        margin-top: 1.5em;
    }

    #bunny {
        width: 12em;
        position: fixed;
        bottom: 1.5em;
        right: 0;
        z-index: 4;
        margin-right: 2em;
    }

